ISSUE: MCZ redmine 3 PURPOSE: Updates to MediaSet.cfm from Linda's comments.  DESCRIPTION: Tweaks to information shown in media_id block and styling.  Fixing a /div tag (that was actually making the layout work, and as a consequese, moving the </div> tags for media_id and layoutbox to just before the end of #mediacontain.  Due to the repositioning of elements on the page, this results in white space accumulating before the footer (but not in the much less desirable location between media_id and media_thumbs).

--- a/includes/css/mediacontain.css
+++ b/includes/css/mediacontain.css
@@ -137,6 +137,12 @@
 	color: black;
 	margin: 1em 0 14px 0;
 }
+#mediacontain .media_id h3 {
+	font-size: 1.23em;
+	margin-top: .1em;
+    margin-bottom: 0em;
+    color: BLACK;
+}
 #mediacontain .media_id  h4 {
         width: 500px;
 	  display: block;
